# app/core_data/internal/server/http.go
@@ -23,7 +23,6 @@ func NewWhiteListMatcher() selector.MatchFunc {
 		"/api.core.v1.spider.Spider/GetSpider":         "",
 		"/api.core.v1.statistic.Statistic/Heatmap":     "",
 		"/api.core.v1.statistic.Statistic/PeriodCount": "",
-		"/api.core.v1.statistic.Statistic/Rank":        "",
 	}
 	return func(ctx context.Context, operation string) bool {
 		// log.Info(operation)
